# regex-rename

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  SOLUTION_DIAGRAM.md  TAG_NUMBERING.md  USAGE.md  VISUAL_EXAMPLES.md
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  regex-rename
_codeql_build_dir/.qt/: QtDeploySupport.cmake
_codeql_build_dir/regex-rename_autogen/: deps  mocs_compilation.cpp
resource/: style.qss
src/: filelistwidget.cpp  filelistwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  operation.cpp  operation.h  operationcard.cpp  operationcard.h  operationlistwidget.cpp  operationlistwidget.h
